_sass/digitalhealthhumanities-toolkit-theme.scss
@media (max-width: 420px) {
    #dhht-header {
        padding-top: 1.0em;
        padding-bottom: 1.0em;
        padding-left: 0.5rem
    }

    #dhht-footer {
        padding: 1.5em;
        padding-top: 1.0em;
    }

    .dhht-container {
        margin-left: auto;
        margin-right: auto;
        padding: 2.0em;
    }

    .example-img {
        width: 100%;
    }

    .headshot {
        max-width: 100%;
        align-content: center;
    }

    h1 {
        font-size: 1.6em;
        font-weight: bold
    }

    h2 {
        font-size: 1.4em;
    }

    h3 {
        font-size: 1.2em;
    }

    p,
    li {
        font-size: 1.1em;
    }
}

@media (min-width: 421px) {
    #dhht-header {
        padding: 1.0rem
    }

    #dhht-footer {
        padding-left: 1.75em;
        padding-right: 1.75em;
        padding-top: 2em;
        padding-bottom: 3em;
    }

    .bio {
        max-height: 250px;
        padding: 1.1em;
    
        align-content: center;
    }

    .dhht-container {
        margin-left: auto;
        margin-right: auto;
        padding: 2.0em;
    }

    .example-img {
        width: 75%;
    }

    .headshot {
        max-height: 250px;
    }

    h1 {
        font-size: 2.0em;
        font-weight: bold;
    }

    h2 {
        font-size: 1.6em;
    }

    h3 {
        font-size: 1.3em;
    }


    p,
    li {
        font-size: 1.1em;
    }

}

@media (min-width: 821px) {
    
    #dhht-header {
        padding: 1.0rem;
    }

    #dhht-footer {
        padding-left: 1.75em;
    }

    .bio {
        max-height: 300px;
    }
    
    .dhht-container {
        margin-left: auto;
        margin-right: auto;
        padding-left: 4em;
        padding-right: 4em;
    }

    .headshot {
        max-height: 300px;
    }

    h2 {
        font-weight: 550
    }

    h3 {
        font-size: 1.5em;
        font-weight: 500
    }
}

// General CSS

a {
    color: #0F388A;
    font-weight: 500;

}

.bio-text {
    max-height: 100%;
    overflow-y: scroll;
}

.blockquote-footer {
    color: #000000
}

body {
    font-family: "Helvetica Neue Light", Arial, sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.navbar>div>a:hover,
.navbar>div>div>ul>li>a:hover {
    color: #60D0DA
}

.accordion-button {
    background-color: #B4E2E8;
    border: none;
}

.accordion-button:not(.collapsed) {
    background-color: #60D0DA;
}

.blockquote {
    background-color: #E2F4FC;
    padding: 1.0em
}

.caption {
    font-style: italic;
}

.card-title {
    text-transform: capitalize;
}

code,
pre code {
    background-color: #000000;
    color: #ffffff;
    font-size: 1.1em;
    text-align: center;
}

.dhht-container {
    overflow: scroll;
    flex-grow: 1;
    width: 100%;
}

.dhht-navbar-default {
    background-image: none;
    background-color: #052049;
    width: 100%;
}

.dhht-card {
    a {
        color: #000000
    }
    .card-header {
        background-color: #60D0DA;
    }
}

.dhht-definition {
    .term {
        font-size: 1.5em
    }

    background-color: #B4E2E8;
}

#dhht-footer {
    bottom: 0;
}

.dropdown-item,
.nav-link,
.navbar-brand,
.nav-item {
    color: #ffffff;
}

.example-img {
    img {
        max-height: 600px;
        min-width: 75%;
        overflow: scroll;
    }

    display: block;
    margin-left: auto;
    margin-right: auto
}

.highlighter {
    background-color: #FEB80A;
    font-weight: 500
}

h3 {
    color: #14828C;
}

.list-lesson {
    color: #16A0AC;
    font-weight: 600;
    text-decoration: none;
}

.list-split-sublesson {
    color: #000000;
    text-decoration: none;
    text-align: right;
}

.term {
    font-weight: 600;
}

p>.term {
    color: #0F388A
}

